[#97] Fix overflow issue on topics edit
This closes issue #97

Thank you @russomike for the heads up

--- a/app/assets/stylesheets/partials/_topics.scss
+++ b/app/assets/stylesheets/partials/_topics.scss
@@ -130,6 +130,10 @@ section.topics > div {
 }
 
 #topics_edit {
+  #contentwrap #content {
+    overflow: visible;
+  }
+
   .handle {
     display: none;
   }
